@@ -32,7 +32,7 @@ import cascading.tuple.TupleEntry;
  * {@link cascading.tuple.Tuple} element individually. See {@link AssertMatches} if you need to match the patternString regex against
  * the tuple as a whole.
  * <p/>
- * This operation uses {@link java.util.regex.Matcher} internally, specifically the method {@link java.util.regex.Matcher#matches()}.
+ * This operation uses {@link java.util.regex.Matcher} internally, specifically the method {@link java.util.regex.Matcher#find()}.
  *
  * @see java.util.regex.Matcher
  * @see java.util.regex.Pattern
